syntax = "proto3";

package staff.v1;

option go_package = "github.com/aschepis/backscratcher/staff/api/staffpb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// =============================================================================
// ChatService - Core agent interaction with streaming
// =============================================================================

service ChatService {
  // Send a message and receive streaming response events
  rpc Chat(ChatRequest) returns (stream ChatEvent);

  // Get or create a conversation thread for an agent
  rpc GetOrCreateThread(GetThreadRequest) returns (GetThreadResponse);

  // Load conversation history for a thread
  rpc LoadHistory(LoadHistoryRequest) returns (LoadHistoryResponse);

  // Reset conversation context (clears history for LLM but preserves for display)
  rpc ResetContext(ContextRequest) returns (ContextResponse);

  // Compress conversation context (summarizes and resets)
  rpc CompressContext(ContextRequest) returns (ContextResponse);
}

message ChatRequest {
  string agent_id = 1;
  string thread_id = 2;
  string message = 3;
}

message ChatEvent {
  oneof event {
    TextDelta text_delta = 1;
    ToolUse tool_use = 2;
    ToolResult tool_result = 3;
    ChatComplete complete = 4;
    ChatError error = 5;
  }
}

message TextDelta {
  string text = 1;
}

message ToolUse {
  string tool_id = 1;
  string tool_name = 2;
  string input_json = 3;
}

message ToolResult {
  string tool_id = 1;
  string tool_name = 2;
  string result = 3;
  bool is_error = 4;
}

message ChatComplete {
  string full_response = 1;
  string stop_reason = 2;
}

message ChatError {
  string message = 1;
  string code = 2;
}

message GetThreadRequest {
  string agent_id = 1;
}

message GetThreadResponse {
  string thread_id = 1;
  bool created = 2;
}

message LoadHistoryRequest {
  string agent_id = 1;
  string thread_id = 2;
  bool include_all = 3; // If true, load all messages (for display); otherwise just active context
}

message LoadHistoryResponse {
  repeated Message messages = 1;
}

message Message {
  string role = 1; // "user", "assistant", "tool"
  string content = 2;
  string tool_id = 3;
  string tool_name = 4;
  int64 timestamp = 5;
}

message ContextRequest {
  string agent_id = 1;
  string thread_id = 2;
}

message ContextResponse {
  bool success = 1;
  string message = 2;
}

// =============================================================================
// AgentService - Agent management and state watching
// =============================================================================

service AgentService {
  // List all configured agents
  rpc ListAgents(ListAgentsRequest) returns (ListAgentsResponse);

  // Get detailed information about a specific agent
  rpc GetAgent(GetAgentRequest) returns (Agent);

  // Get current state of an agent
  rpc GetAgentState(GetAgentStateRequest) returns (AgentState);

  // Get statistics for an agent
  rpc GetAgentStats(GetAgentStatsRequest) returns (AgentStats);

  // Stream agent state changes in real-time
  rpc WatchStates(WatchStatesRequest) returns (stream AgentState);
}

message ListAgentsRequest {}

message ListAgentsResponse {
  repeated Agent agents = 1;
}

message Agent {
  string id = 1;
  string name = 2;
  string model = 3;
  string provider = 4;
  repeated string tools = 5;
  string schedule = 6;
  bool disabled = 7;
  string system_prompt = 8;
  int64 max_tokens = 9;
}

message GetAgentRequest {
  string agent_id = 1;
}

message GetAgentStateRequest {
  string agent_id = 1;
}

message AgentState {
  string agent_id = 1;
  string state = 2; // "idle", "running", "waiting_external", "rate_limited"
  google.protobuf.Timestamp next_wake = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message GetAgentStatsRequest {
  string agent_id = 1;
}

message AgentStats {
  string agent_id = 1;
  int64 execution_count = 2;
  int64 failure_count = 3;
  int64 wakeup_count = 4;
  google.protobuf.Timestamp last_execution = 5;
  google.protobuf.Timestamp last_failure = 6;
  string last_failure_message = 7;
}

message WatchStatesRequest {
  repeated string agent_ids = 1; // Empty means all agents
}

// =============================================================================
// InboxService - Notification management
// =============================================================================

service InboxService {
  // List inbox items
  rpc ListItems(ListInboxRequest) returns (ListInboxResponse);

  // Archive an inbox item
  rpc Archive(ArchiveRequest) returns (ArchiveResponse);

  // Stream new inbox items as they arrive
  rpc Watch(WatchInboxRequest) returns (stream InboxItem);
}

message ListInboxRequest {
  bool include_archived = 1;
}

message ListInboxResponse {
  repeated InboxItem items = 1;
}

message InboxItem {
  int64 id = 1;
  string agent_id = 2;
  string thread_id = 3;
  string message = 4;
  bool requires_response = 5;
  string response = 6;
  google.protobuf.Timestamp response_at = 7;
  google.protobuf.Timestamp archived_at = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message ArchiveRequest {
  int64 inbox_id = 1;
}

message ArchiveResponse {
  bool success = 1;
}

message WatchInboxRequest {}

// =============================================================================
// MemoryService - Memory search and storage
// =============================================================================

service MemoryService {
  // Search memories
  rpc Search(SearchMemoryRequest) returns (SearchMemoryResponse);

  // Store a memory item
  rpc Store(StoreMemoryRequest) returns (StoreMemoryResponse);

  // Dump all memory to file (admin operation)
  rpc Dump(DumpMemoryRequest) returns (DumpMemoryResponse);

  // Clear all memory (admin operation)
  rpc Clear(ClearMemoryRequest) returns (ClearMemoryResponse);
}

message SearchMemoryRequest {
  string query = 1;
  string scope = 2; // "agent" or "global"
  string agent_id = 3; // Required if scope = "agent"
  repeated string types = 4; // fact, episode, profile, doc_ref
  int32 limit = 5;
}

message SearchMemoryResponse {
  repeated MemoryItem items = 1;
}

message MemoryItem {
  int64 id = 1;
  string agent_id = 2;
  string scope = 3;
  string type = 4;
  string content = 5;
  double importance = 6;
  google.protobuf.Struct metadata = 7;
  google.protobuf.Timestamp created_at = 8;
}

message StoreMemoryRequest {
  string agent_id = 1;
  string scope = 2;
  string type = 3;
  string content = 4;
  double importance = 5;
  google.protobuf.Struct metadata = 6;
}

message StoreMemoryResponse {
  int64 id = 1;
}

message DumpMemoryRequest {
  string file_path = 1;
}

message DumpMemoryResponse {
  bool success = 1;
  string message = 2;
}

message ClearMemoryRequest {}

message ClearMemoryResponse {
  bool success = 1;
  int64 items_deleted = 2;
}

// =============================================================================
// SystemService - Daemon information and control
// =============================================================================

service SystemService {
  // Get daemon status and version info
  rpc GetInfo(GetInfoRequest) returns (SystemInfo);

  // List all registered tools
  rpc ListTools(ListToolsRequest) returns (ListToolsResponse);

  // List MCP servers and their status
  rpc ListMCPServers(ListMCPServersRequest) returns (ListMCPServersResponse);

  // Dump tool schemas to file
  rpc DumpToolSchemas(DumpToolSchemasRequest) returns (DumpToolSchemasResponse);

  // Dump conversations to files
  rpc DumpConversations(DumpConversationsRequest) returns (DumpConversationsResponse);

  // Clear all conversations
  rpc ClearConversations(ClearConversationsRequest) returns (ClearConversationsResponse);

  // Reset agent stats
  rpc ResetStats(ResetStatsRequest) returns (ResetStatsResponse);

  // Dump inbox to file
  rpc DumpInbox(DumpInboxRequest) returns (DumpInboxResponse);

  // Clear inbox
  rpc ClearInbox(ClearInboxRequest) returns (ClearInboxResponse);
}

message GetInfoRequest {}

message SystemInfo {
  string version = 1;
  string status = 2; // "running", "degraded"
  google.protobuf.Timestamp started_at = 3;
  int64 active_agents = 4;
  int64 connected_clients = 5;
  string socket_path = 6;
}

message ListToolsRequest {
  string agent_id = 1; // Optional: filter to tools available to this agent
}

message ListToolsResponse {
  repeated ToolInfo tools = 1;
}

message ToolInfo {
  string name = 1;
  string description = 2;
  string server = 3; // MCP server name if from MCP, empty for native
}

message ListMCPServersRequest {}

message ListMCPServersResponse {
  repeated MCPServerInfo servers = 1;
}

message MCPServerInfo {
  string name = 1;
  string transport = 2; // "stdio", "http"
  string status = 3; // "connected", "disconnected", "error"
  int64 tool_count = 4;
  repeated string tools = 5;
}

message DumpToolSchemasRequest {
  string file_path = 1;
}

message DumpToolSchemasResponse {
  bool success = 1;
  string message = 2;
}

message DumpConversationsRequest {
  string output_dir = 1;
}

message DumpConversationsResponse {
  bool success = 1;
  string message = 2;
}

message ClearConversationsRequest {}

message ClearConversationsResponse {
  bool success = 1;
}

message ResetStatsRequest {}

message ResetStatsResponse {
  bool success = 1;
}

message DumpInboxRequest {
  string file_path = 1;
}

message DumpInboxResponse {
  bool success = 1;
  string message = 2;
}

message ClearInboxRequest {}

message ClearInboxResponse {
  bool success = 1;
}
